# credit-card-fraud-detection

./: Dockerfile  README.md  app.py  docker-compose.yml  exploration.ipynb  pyproject.toml
ml_framework_project/: main.py
ml_framework_project/data_analyzer/: analyzer.py  data_preprocessing.py  data_reader.py  encoder.py  scaler.py
ml_framework_project/datasets/: credit_card.py
ml_framework_project/models/: classifier.py  clustering.py  regressor.py
saved_models/: best_model_keras_rnn.keras  best_model_random_forest.pkl  model_decision_tree.pkl  model_keras_ann.keras  model_keras_cnn.keras  model_keras_rnn.keras  model_linear_regression.pkl  model_logistic_regression.pkl  model_random_forest.pkl
tests/: test_data_processing.py
